--- a/Node JS/22-02-2023/revisao/cliente/index.html
+++ b/Node JS/22-02-2023/revisao/cliente/index.html
@@ -12,14 +12,20 @@
         <form action="#">
             <h2>Nova atividade</h2>
             <input type="text" id="titulo" placeholder="Título">
-            <input type="button" id="button" value="Salvar">
+            <input type="button" id="button" value="Salvar" onclick="AdicionarAtividade()">
         </form>
 
         <section id="todo-list">
             <h1>Lista de atividades</h1>
+
+            
+
+
         </section>
 
 
     </main>
+
+    <script src="index.js"></script>
 </body>
 </html>
