--- a/Node JS/Desafios/Desafio 3/cliente/index.html
+++ b/Node JS/Desafios/Desafio 3/cliente/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Noticiário</title>
 </head>
 <body>
-    <h1>Página principal</h1>
+    
+    <main>
+
+        <form action="#">
+            <h2>Adicionar noticia</h2>
+            <input type="text" id="titulo" placeholder="Título">
+            <input type="text" id="descricao" placeholder="Descrição">
+            <input type="button" id="button" value="Adicionar" onclick="Adicionar()">
+        </form>
+
+        <h2>Noticias:</h2>
+
+        <section id="section-notices">
+           
+        </section>
+
+
+    <script src="index.js"></script>
+    </main>
+
+
 </body>
 </html>
