--- a/Node JS/Março/03-03/revisao/client/index.html
+++ b/Node JS/Março/03-03/revisao/client/index.html
@@ -9,21 +9,28 @@
         #messages{
             background-color: aliceblue;
             width: 500px;
-            height: 700px;
+            height: 400px;
         }
     </style>
 </head>
 <body>
     <h2>index</h2>
 
-    <section id="messages">
+    <form name="user_form_name" id="user_form">
 
-    </section>
+        <input type="text" name="user" id="user" placeholder="Usuário" required>
+        <button type="submit">Definir</button>
+
+    </form>
+
+    <div id="messages">
+
+    </div>
 
     <form name="messages_form_name" id="message_form">
 
-        <input type="text" name="msg" id="msg">
-        <button>Enviar</button>
+        <input type="text" name="msg" id="msg" placeholder="mensagem" required>
+        <button type="submit">Enviar</button>
 
     </form>
 
