--- a/Node JS/Desafios/Desafio 6 - CRUD SQLITE/script1/public/index.html
+++ b/Node JS/Desafios/Desafio 6 - CRUD SQLITE/script1/public/index.html
@@ -22,6 +22,15 @@
             <input type="text" name="nome" id="nome" placeholder="Produto" required>
             <input type="text" name="descricao" id="descricao" placeholder="Descrição">
             <input type="number" name="preco" id="preco" placeholder="Preço" required>
+            <select name="categoria" id="categoria" required>
+                <option value="padaria">Padaria</option>
+                <option value="alimentos">Alimentos</option>
+                <option value="congelados">Congelados</option>
+                <option value="limpeza">Limpeza</option>
+                <option value="bebidas">Bebidas</option>
+                <option value="papelaria">Papelaria</option>
+                <option value="outro">Outro</option>
+            </select>
             <button type="submit">Adicionar</button>
         </form>
 
