--- a/Desafios/Desafio 1 - simgle page - Node,React/front/public/index.html
+++ b/Desafios/Desafio 1 - simgle page - Node,React/front/public/index.html
@@ -5,10 +5,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>React App</title>
+    <title>Crud react/node</title>
   </head>
   <body>
-    <h2>Hello by front-end</h2>
     <div id="root"></div>
   </body>
 </html>
